index.css
#gameContainer{
    text-align: center;
}
#gameBoard{
    border: 3px solid;
}
#score{
    display: flex;
    justify-content: space-evenly;
}
#scoreText, #scoreLabel{
    font-family: "Permanent Marker", cursive;
    font-size: 50px;
    display: inline-block;
}
#highestScoreText, #highestScoreLabel{
    font-family: "Permanent Marker", cursive;
    font-size: 25px;
    display: inline-block;
}
#resetBtn{
    font-family: "Permanent Marker", cursive;
    font-size: 22px;
    width: 100px;
    height: 50px;
    border: 4px solid;
    border-radius: 15px;
    cursor: pointer;
}
.control-container {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.button-row {
    display: flex;
    justify-content: center;
}

.control-button {
    width: 50px;
    height: 50px;
    margin: 10px;
    font-size: 25px;
    text-align: center;
    background-color: #4CAF50;
    color: white;
    border: none;
    border-radius: 10px;
    cursor: pointer;
}

.control-button:hover {
    background-color: #45a049;
}

/* Specific styles for Up, Down, Left, Right alignment */
.up, .down {
    width: 80px;
    height: 80px;
    font-size: 40px;
}

.left, .right {
    width: 80px;
    height: 80px;
    font-size: 40px;
}

